# nexiss

./: .env.example  .gitignore  Dockerfile  README.md  ai-review.js  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  settings.json  test.js
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0007_org_id_pk_fix_final.py  0008_merge_final_heads.py  20260427_0001_phase1_core_models.py  20260427_0002_phase6_document_lifecycle.py  20260427_0003_document_classification_and_entities.py  20260427_0004_phase9_internal_automation.py  20260427_0006_phase13_classification_and_subtype.py  20260429_0007_fix_organization_primary_key.py  e35404209ae5_org_id_pk_fix.py
backups/: .claude.json.backup.1777143317501  .claude.json.backup.1777144168645  .claude.json.backup.1777144376819  .claude.json.backup.1777204394445
backups/nexiss_backup_20260428/: .dockerignore  .env.example  .gitignore  BUILD_SUMMARY.md  README.md  auto_review.py  docker-compose.yml  history.jsonl  pyproject.toml  review_config.json  review_single.py
backups/nexiss_backup_20260428/.cursor/: mcp.json
backups/nexiss_backup_20260428/backups/: .claude.json.backup.1777288894070
backups/nexiss_backup_20260428/frontend/: package-lock.json
backups/nexiss_backup_20260428/plans/: fuzzy-spinning-pebble.md  sorted-mixing-wirth.md
backups/nexiss_backup_20260428/plugins/: known_marketplaces.json
backups/nexiss_backup_20260428/scripts/: review_config.json  setup_storage.py
backups/nexiss_backup_20260428/sessions/: 10808.json  21168.json
frontend/: .eslintrc.cjs  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
infra/: docker-compose.dev.yml
plugins/: known_marketplaces.json
projects/C--Users-pc/: b46c2255-bd9c-4737-8487-93a4fabfac68.jsonl
projects/C--Users-pc--claude/: 34d9d13e-cf74-49ad-a4d8-65f3b0a20ca9.jsonl  5cb8db5b-36e9-40d9-a260-9d6cca3b478d.jsonl  66e4cc9e-c605-4eca-89d4-e8adcfd14db3.jsonl  7466b8a2-ae30-400a-b95e-e1e342c4cea0.jsonl  7ebe002a-c71d-402c-8bed-0a779c56a23c.jsonl  82b87fa0-aad5-4d89-bbeb-f4967a19e45f.jsonl  9ae1ca9b-6443-434a-a419-9c5917e03715.jsonl  e1cb31cc-8c5f-4bd5-894d-cf070cc8ade8.jsonl  f08d67e1-56f7-4ab1-9795-eb0e5f1bba16.jsonl
projects/C--Users-pc--local-bin/: fa74d8f8-793c-4c8c-b1a0-431ab362491d.jsonl
projects/c--Users-pc-projects-nexiss/: d618071e-8d8a-4750-8c0b-41e952b3354d.jsonl
scripts/: auto_review.py  review_single.py  seed_data.py
sessions/: 20724.json  9384.json
tests/: test_admin.py  test_ai_pipeline.py  test_auth.py  test_automation_engine.py  test_classification.py  test_documents.py  test_entity_matching.py  test_export_service.py  test_health.py  test_models_metadata.py  test_realtime_events.py  test_security.py  test_textract_service.py  utils.py
(+163 files in other folders)
