[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexiss"
version = "0.1.0"
description = "Universal Document Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Cache / Queue
    "redis>=5.0.3",
    "celery[redis]>=5.3.6",
    # AWS
    "boto3>=1.34.69",
    # AI / OCR
    "openai>=1.23.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.3.0",
    "pypdf>=4.1.0",
    # Export
    "openpyxl>=3.1.2",
    # Fuzzy matching
    "rapidfuzz>=3.8.1",
    # Billing
    "stripe>=9.5.0",
    # Monitoring
    "prometheus-client>=0.20.0",
    # HTTP client
    "httpx>=0.27.0",
    # Config
    "pydantic-settings>=2.2.1",
    "pydantic[email]>=2.0.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.1",
    "mypy>=1.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
